--- a/Musica.CSS
+++ b/Musica.CSS
@@ -18,11 +18,13 @@ main {
     color: blanchedalmond;
 }
 body {
-    background-image: url('logos/3.gif');
-    background-size: cover; /* Ajusta la imagen para que cubra toda la pantalla */
+    margin: 0; /* Elimina márgenes por defecto */
+    height: 100vh; /* Ocupa toda la pantalla */
+    background-image: url('imagenes/pagina_pricipal/musica.jpg'); /* Ruta de la imagen */
+    background-size: cover; /* La imagen cubre toda la pantalla */
     background-position: center; /* Centra la imagen */
-    background-repeat: no-repeat; /* Evita que la imagen se repita */
-    background-attachment: fixed; /* Fija la imagen de fondo al desplazarse */
+    background-repeat: no-repeat; /* No se repite la imagen */
+    background-attachment: fixed; /* Fija la imagen al hacer scroll */
 }
 /*es para el apartado de web*/
 body {
