--- a/calculadora.CSS
+++ b/calculadora.CSS
@@ -1,9 +1,11 @@
 body {
-    background-image: url('logos/4.gif');
-    background-size: cover; /* Ajusta la imagen para que cubra toda la pantalla */
-    background-position: center; /* Centra la imagen */
-    background-repeat: no-repeat; /* Evita que la imagen se repita */
-    background-attachment: fixed; /* Fija la imagen de fondo al desplazarse */
+  margin: 0; /* Elimina márgenes por defecto */
+  height: 100vh; /* Ocupa toda la pantalla */
+  background-image: url('imagenes/pagina_pricipal/tiempo.jpg'); /* Ruta de la imagen */
+  background-size: cover; /* La imagen cubre toda la pantalla */
+  background-position: center; /* Centra la imagen */
+  background-repeat: no-repeat; /* No se repite la imagen */
+  background-attachment: fixed; /* Fija la imagen al hacer scroll */
 }
 body {
     font-family: Arial, sans-serif;
