--- a/ai.CSS
+++ b/ai.CSS
@@ -1,18 +1,10 @@
 body {
-    margin: 0; /* Elimina márgenes por defecto */
-    height: 100vh; /* Ocupa toda la pantalla */
-    background-image: url('imagenes/pagina_pricipal/ai.jpg'); /* Ruta de la imagen */
-    background-size: cover; /* La imagen cubre toda la pantalla */
-    background-position: center; /* Centra la imagen */
-    background-repeat: no-repeat; /* No se repite la imagen */
-    background-attachment: fixed; /* Fija la imagen al hacer scroll */
-}
-/*es para el apartado de web*/
-body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    background-color: #e0f7fa; /* Fondo azul claro */
 }
+
 /*es para el cuadro de arriba*/
 .top-bar {
     background-color: #0f0064;
@@ -20,6 +12,7 @@ body {
     text-align: center;
     padding: 10px 0;
 }
+
 nav {
     display: flex;
     justify-content: space-between;
@@ -27,60 +20,49 @@ nav {
     background-color: #f8f8f8;
     padding: 10px 20px;
 }
-.logo img {
-    height: 50px;
-}
+
 nav ul {
     list-style: none;
     margin: 0;
     padding: 0;
     display: flex;
 }
+
 nav ul li {
     margin: 0 10px;
 }
+
 nav ul li a {
     text-decoration: none;
     color: #333;
     font-weight: bold;
 }
+
 nav ul li a:hover {
     color: #317dd4;
 }
-/* Simple styling for buttons */
+
 button {
     padding: 10px 20px;
     margin: 10px;
     font-size: 16px;
     cursor: pointer;
-}
-/* Optional: Add a background color and transition for hover effect */
-button:hover {
     background-color: #4CAF50;
     color: white;
+    border: none;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+}
+
+button:hover {
+    background-color: #45a049;
 }
 
 .btn {
     color: white;
     background-color: #007BFF;
 }
+
 .btn:hover {
     background-color: #0056b3;
-}
-.boton-estilo {
-    background-color: #4CAF50; 
-    color: white; 
-    border: none; 
-    padding: 10px 20px; 
-    text-align: center; 
-    text-decoration: none; 
-    display: inline-block; 
-    font-size: 16px; 
-    border-radius: 5px; 
-    cursor: pointer; 
-    transition: background-color 0.3s; 
-}
-
-.boton-estilo:hover {
-    background-color: #45a049; 
 }
